--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
                                         <button id="ok" class="clickable">OK</button>
                                 </div>
                         </div>
+                </div>
+        </div>
+        <div class="popup-darkbox" style="display:none;">
+                <div class="middle-center shadowed popup">
                         <div id="broke" class="popup-page" style="display:none;">
                                 <div class="popup-title">You're broke !</div>
                                 <div class="popup-content">
